Añadida la doc en index del controlador Categorias
